feat: Add user service proxy integration with authentication and authorization

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ JWT_SECRET=your-jwt-secret-here
 # Downstream service URLs
 AUTH_SERVICE_URL=http://localhost:3003
 PRODUCT_SERVICE_URL=http://localhost:3001
+USER_SERVICE_URL=http://localhost:3002
